--- a/bgame/static/css/bgame.css
+++ b/bgame/static/css/bgame.css
@@ -11,7 +11,7 @@ div#top-nav {
     text-align: right;
 }
 
-div#content-wrapper {
+div#wrapper {
     left: 50%;
     margin-left: -30%;
     position: absolute; 
