--- a/bgame/templates/base.html
+++ b/bgame/templates/base.html
@@ -4,6 +4,7 @@
         <title>The Beer Game</title>
         <style type="text/css">
             @import url('{{ STATIC_URL }}css/bgame.css');
+            @import url('{{ STATIC_URL }}/jquery-ui-1.8.9.custom.css');
         </style>
         {% block extra_headers %} 
         {% endblock %}
@@ -24,6 +25,10 @@
             </div>
         </div>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}/js/json2.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}/js/bgame.js"></script>
         {% block pre-end-body %}
         {% endblock %}
     </body>
