--- a/bgame/templates/index.html
+++ b/bgame/templates/index.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
-{% block header-top %}
+{% block header %}
     <div id="top-nav">
         <a href="">Sign In</a>
     </div>
+
+    <img src="{{ STATIC_URL }}img/beergame-logo.gif" />
 {% endblock %}
 
 {% block content %}
