--- a/bgame/templates/base.html
+++ b/bgame/templates/base.html
@@ -13,13 +13,9 @@
     <body>
         <div id="wrapper">
             <div id="header">
-                {% block header-top %}
+                {% block header %}
                 {% endblock %}
-
-                <img src="{{ STATIC_URL }}img/beergame-logo.gif" />
-
-                {% block header-bottom %}
-                {% endblock %}
+            </div>
 
                 {% block content %}
                 {% endblock %}
