--- a/bgame/templates/index.html
+++ b/bgame/templates/index.html
@@ -13,6 +13,9 @@
         <ul id="add-game-form"> 
             {{ form.as_ul }}
             <li><input type="submit" id="add-game-btn" value="Add Game" /></li>
+            <li>
+                <span id="loading" class="hidden"><img src="{{ STATIC_URL }}/img/loading.gif" /></span>
+            </li>
         </ul>
     </div>
     <div id="game-listing-wrapper">
