--- a/bgame/templates/game.html
+++ b/bgame/templates/game.html
@@ -31,8 +31,8 @@
 {% block content %}
 
 <div class="step-wrapper">
-    <div id="next_period" class="step-button">
-        <input type="button" id="next-period-btn" class="button" value="{% ifequal period.number 0 %}Start game{% endifequal %}{% ifnotequal period.number 0 %}Start next period{% endifnotequal %}" />
+    <div id="next-period" class="step-button">
+        <input type="button" id="start-btn" class="button" value="{% ifequal period.number 0 %}Start game{% endifequal %}{% ifnotequal period.number 0 %}Start next period{% endifnotequal %}" />
     </div>
     <br class="clear">
 </div>
@@ -45,15 +45,15 @@
         </div>
         <div class="lead-tile" id="inventory">
             <h4>On-Hand Inventory</h4>
-            <p id="inv_amt">{{ period.inventory }}</p>
+            <p id="inv-amt">{{ period.inventory }}</p>
         </div>
         <div class="lead-tile" id="shipment1">
             <h4>Shipment 1</h4>
-            <p id="ship1_amt">{{ period.shipment_1 }}</p>
+            <p id="ship1-amt">{{ period.shipment_1 }}</p>
         </div>
         <div class="lead-tile" id="shipment2">
             <h4>Shipment 2</h4>
-            <p id="ship2_amt">{{ period.shipment_1 }}</p>
+            <p id="ship2-amt">{{ period.shipment_2 }}</p>
         </div>
         <div class="instructions">
         Click Step 1 to advance Shipment 1 to On-hand Inventory and to advance
@@ -74,11 +74,11 @@
         </div>
         <div class="lead-tile" id="order">
             <h4>Current Order</h4>
-            <p id="order_amt">{% ifnotequal period.demand None %}{{ period.demand }}{% endifnotequal %}</p>
+            <p id="order-amt">{% ifnotequal period.demand None %}{{ period.demand }}{% endifnotequal %}</p>
         </div>
         <div class="lead-tile" id="order1">
             <h4>Incoming Order 1</h4>
-            <p id="order1_amt">
+            <p id="order1-amt">
                 {% if display_orders %}
                     {{ period.order_1 }}
                 {% endif %}
@@ -86,7 +86,7 @@
         </div>
         <div class="lead-tile" id="order2">
             <h4>Incoming Order 2</h4>
-            <p id="order2_amt">
+            <p id="order2-amt">
                 {% if display_orders %}
                     {{ period.order_1 }}
                 {% endif %}
