--- a/bgame/templates/game.html
+++ b/bgame/templates/game.html
@@ -31,8 +31,10 @@
 {% block content %}
 
 <div class="step-wrapper">
-    <div id="next-period" class="step-button">
-        <input type="button" id="start-btn" class="button" value="{% ifequal period.number 0 %}Start game{% endifequal %}{% ifnotequal period.number 0 %}Start next period{% endifnotequal %}" />
+    <div class="step">
+        <div id="next-period" class="step-button">
+            <input type="button" id="start-btn" class="button" value="{% ifequal period.number 0 %}Start game{% endifequal %}{% ifnotequal period.number 0 %}Start next period{% endifnotequal %}" />
+        </div>
     </div>
     <br class="clear">
 </div>
@@ -97,7 +99,7 @@
 </div>
 
 <div class="step-wrapper">
-        <div id="shipping">
+        <div id="shipping" class="step">
             <label for="amt_to_ship">Quantity to deliver</label>
             <input type="text" id="amt_to_ship" />
             <input type="button" id="ship-btn" class="button" value="Ship" />
@@ -125,7 +127,7 @@
 </div>
 
 <div class="step-wrapper">
-        <div id="ordering">
+        <div id="ordering" class="step">
             <label for="amt_to_order">Enter your order:</label>
             <input type="text" id="amt_to_order" />
             <input type="button" id="order-btn" class="button" value="Order" />
