add ship functionality

--- a/bgame/templates/game.html
+++ b/bgame/templates/game.html
@@ -100,8 +100,8 @@
 
 <div class="step-wrapper">
         <div id="shipping" class="step">
-            <label for="amt_to_ship">Quantity to deliver</label>
-            <input type="text" id="amt_to_ship" />
+            <label for="amt-to-ship">Quantity to deliver</label>
+            <input type="text" id="amt-to-ship" />
             <input type="button" id="ship-btn" class="button" value="Ship" />
             <div id="shipment_errors" class="error"></div>
         </div>
