--- a/bgame/templates/game.html
+++ b/bgame/templates/game.html
@@ -119,8 +119,8 @@
         <div class="step-button">
             <input type="button" id="step3-btn" class="button" value="Step 3" />
         </div>
-        <br />
-        <div id="period_table">
+        <br class="clear" />
+        <div id="period-table">
         </div>
         <br class="clear" />
     </div>
