--- a/bgame/templates/game.html
+++ b/bgame/templates/game.html
@@ -128,8 +128,8 @@
 
 <div class="step-wrapper">
         <div id="ordering" class="step">
-            <label for="amt_to_order">Enter your order:</label>
-            <input type="text" id="amt_to_order" />
+            <label for="amt-to-order">Enter your order:</label>
+            <input type="text" id="amt-to-order" />
             <input type="button" id="order-btn" class="button" value="Order" />
             <div id="order_errors" class="error"></div>
         </div>
