--- a/bgame/templates/period_listing.html
+++ b/bgame/templates/period_listing.html
@@ -20,7 +20,7 @@
         <td>{{ period.backlog }}</td>
         <td>{{ period.shipment_1 }}</td>
         <td>{{ period.shipment_2 }}</td>
-        <td>{{ period.cost }}</td>
+        <td>{{ period.current_cost }}</td>
         <td>{{ period.cumulative_cost }}</td>
         <td>{{ period.order }}</td>
     </tr>
